Fix contrast styling for checkboxes

--- a/src/containers/Admin/EditTab/styles.scss
+++ b/src/containers/Admin/EditTab/styles.scss
@@ -63,7 +63,7 @@
     background-color: var(--tavla-checkbox-color);
 }
 
-.eds-checkbox__icon {
+.eds-checkbox__icon, .eds-contrast .eds-checkbox__icon {
     border: 0.125rem solid var(--tavla-checkbox-color);
 }
 
@@ -75,9 +75,11 @@
 .eds-checkbox__container:hover input:checked + .eds-checkbox__icon,
 .eds-checkbox__container:hover input:indeterminate + .eds-checkbox__icon {
     border-color: var(--tavla-checkbox-hover-color);
+    
 }
 
-.eds-checkbox__container:hover input + .eds-checkbox__icon {
+.eds-checkbox__container:hover input + .eds-checkbox__icon,
+.eds-contrast .eds-checkbox__container:hover input + .eds-checkbox__icon {
     border-color: var(--tavla-checkbox-hover-color);
     background-color: var(--tavla-input-background-color);
 }
